
=head2 Changes in Devel::NYTProf 3.12 (svn 1194) 22nd April 2010

XXX TODO
Consider eval_pv from outside perl, e.g. plperl
On eval report add links to sibling eval reports

Major changes:

  Added profile reporting of code executed in string evals.
    Each string eval executed gets it's own report page.
    String evals may be collapsed/merged in some cases.

  Enabled savesrc=1 by default.

Other changes:

  Fixed off-by-1 error in number of Files an xsub/opcode was called from.
  Fixed Devel::NYTProf::Apache to work in more situations.

  Improved behaviour for 'duplicate' anon-subs defined in separate
    invocations of a particular string eval.

  Added automatic detection of calls to POSIX::_exit() by the sub profiler
    so finish_profile() gets called and a usable profile is produced.
  Added posix_exit=1 option to do the same thing (in a different way)
    when the sub profiler is not being used (i.e., subs=0).

Documentation Changes:

  Sequences of blank lines are skipped in generated reports.
    Relevant for savesrc mode in which perl doesn't store pod sections.
  Corrected typos in nytprofhtml docs thanks to chocolate@cpan.org.
  Documented how to use Devel::NYTProf::Apache with virtual hosts that
    use the PerlOptions +Parent or +Clone configuration.

=head2 Changes in Devel::NYTProf 3.11 (svn 1171) 12th March 2010

  Fixed assorted issues on Windows thanks to Jan Dubois.
  Fixed assorted issues 64bit systems thanks to Jan Dubois.

  Refactored I/O to create an API that encapsulates the data
    file format, thanks to Nicholas Clark.
  Updated and optimized nytprofmerge to use the new API
    yielding a significant speed boost, thanks to Nicholas Clark.

=head2 Changes in Devel::NYTProf 3.02 (svn 1094) 5th March 2010

  Fixed handling of usecputime=1 option and updated
    docs to note the significant limitations.
  Fixed association of XS subs to source files
    in some edge cases thanks to Nicholas Clark.